manifests/hashicorp-vault-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hashicorp-vault
  namespace: hashicorp-vault

spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`vault.lisa`)

    observability:
      accessLogs: true
      metrics: true
      tracing: true

    services:
      - name: hashicorp-vault
        port: 8200
